@@ -3,12 +3,10 @@ package cn.oyzh.easyshell.fx.s3;
 import cn.oyzh.common.util.StringUtil;
 import cn.oyzh.fx.gui.text.field.SelectTextFiled;
 import cn.oyzh.fx.plus.converter.SimpleStringConverter;
-import cn.oyzh.fx.plus.menu.FXContextMenu;
 import cn.oyzh.i18n.I18nHelper;
 import software.amazon.awssdk.regions.Region;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * s3区域输入框，可搜索
@@ -18,51 +16,27 @@ import java.util.stream.Collectors;
  */
 public class ShellS3RegionTextField extends SelectTextFiled<Region> {
 
-//    {
-//        // 覆盖默认菜单
-//        this.setContextMenu(FXContextMenu.EMPTY);
-//        this.setTipText(I18nHelper.pleaseSelectRegion());
-//    }
 
     /**
      * 区域列表
      */
     private List<Region> regions;
 
-    // @Override
-    // public ShellS3RegionTextFieldSkin skin() {
-    //     return (ShellS3RegionTextFieldSkin) super.skin();
-    // }
-    //
-    // @Override
-    // protected ShellS3RegionTextFieldSkin createDefaultSkin() {
-    //     if (this.getSkin() != null) {
-    //         return (ShellS3RegionTextFieldSkin) this.getSkin();
-    //     }
-    //     return new ShellS3RegionTextFieldSkin(this);
-    // }
-
     @Override
-    protected void onTextChanged(String newValue) {
-        if (!this.isFocused()) {
-            return;
+    protected boolean onTextChanged(String newValue) {
+        if (!super.onTextChanged(newValue)) {
+            return false;
         }
-        if (this.skin().isTexting()) {
-            this.skin().clearTexting();
-            return;
-        }
-        // 移除选区
-        this.skin().clearSelection();
         // 隐藏弹窗
         if (StringUtil.isBlank(newValue)) {
             this.setItemList(this.regions);
             this.skin().hidePopup();
-            return;
+            return false;
         }
         // 过滤内容
         List<Region> newList = this.regions.stream()
                 .filter(t -> StringUtil.containsIgnoreCase(t.toString(), newValue))
-                .collect(Collectors.toList());
+                .toList();
         // 设置内容
         this.setItemList(newList);
         // 内容为空，隐藏弹窗
@@ -71,6 +45,7 @@ public class ShellS3RegionTextField extends SelectTextFiled<Region> {
         } else {
             this.skin().showPopup();
         }
+        return true;
     }
 
     public void select(String region) {
@@ -81,9 +56,9 @@ public class ShellS3RegionTextField extends SelectTextFiled<Region> {
         this.skin().selectItem(connect);
     }
 
-    public Region getSelectedItem() {
-        return this.skin().getSelectedItem();
-    }
+    //public Region getSelectedItem() {
+    //    return this.skin().getSelectedItem();
+    //}
 
     /**
      * 加载区域
